Migration to Java 16
- Minor fixes